syntax = "proto3";

package api.hellokratos;

option go_package = "hellokratos/api/hellokratos;hellokratos";
option java_multiple_files = true;
option java_package = "api.hellokratos";

service Hellokratos {
    rpc CreateHellokratos (CreateHellokratosRequest) returns (CreateHellokratosReply);
    rpc UpdateHellokratos (UpdateHellokratosRequest) returns (UpdateHellokratosReply);
    rpc DeleteHellokratos (DeleteHellokratosRequest) returns (DeleteHellokratosReply);
    rpc GetHellokratos (GetHellokratosRequest) returns (GetHellokratosReply);
    rpc ListHellokratos (ListHellokratosRequest) returns (ListHellokratosReply);
}

message CreateHellokratosRequest {}
message CreateHellokratosReply {}

message UpdateHellokratosRequest {}
message UpdateHellokratosReply {}

message DeleteHellokratosRequest {}
message DeleteHellokratosReply {}

message GetHellokratosRequest {}
message GetHellokratosReply {}

message ListHellokratosRequest {}
message ListHellokratosReply {}